<resources>
    <string name="app_name">CBS_APP</string>
    <string name="appTitle">Sherlock</string>
    <string name="appDescription">Juntos contra el ciberacoso\n ¡Recopilemos pruebas, hagamos justicia!</string>
    <string name="slogan">¡Juntos contra el ciberacoso!</string>
    <string name="fpassword">¡Olvide la contraseña!</string>
    <string name="loginTxt">LOGIN</string>
    <string name="singUpTxt">INGRESAR</string>
    <string name="nUser">Nuevo usuario? Crear Cuenta</string>
    <string name="loginOption">Ya tienes cuenta? Log-in</string>
    <string name="mTitle">¡Hola! de nuevo.</string>
    <string name="mText">Sabemos que la seguridad es importante\n\nEs por eso que queremos asegurarte que tus datos estan a salvo y se almacenan de forma anonima.\n\nGracias por elegirnos.</string>
    <string name="btnMNext">Listo</string>
    <string name="title_activity_dash">Dash</string>

    <string name="vocabulario">El ciberacoso puede ser\n" +
                            "una experiencia traumática \n" +
                            "para cualquier persona, \n" +
                            "pero existen algunas medidas \n" +
                            "que se pueden tomar para \n" +
                            "protegerse y prevenir esta situación. \n" +
                            "Algunas recomendaciones \n" +
                            "son las siguientes...</string>
    <string name="tusCasos">Estos son tus casos actualmente, recuerda que\n
        "tu información esta totalmente protegida y se \n"
        "almacena de forma anónima."
    </string>
    <string name="ejemploCaso">Descripción\n"breve del caso..."</string>
    <string name="verMasBTN">Ver mas...</string>
    <string name="consultarBTN">Consultar...</string>
    <string name="vTitle">Tips que\nte pueden servir</string>
    <string name="vDesc">Queremos que tomes el control de tu seguridad lo mas pronto posible.</string>
    <string name="evidenciasTitle">MIS EVIDENCIAS</string>
    <string name="vAllTitle">Ver Todo</string>
</resources>