<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Dashboard"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#f5f5f5"
            android:padding="29dp"
            app:cardCornerRadius="200dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/viewUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="K"
                android:textColor="#63000000"
                android:textSize="20dp" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/appTitle"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/logoColor"
            android:layout_centerHorizontal="true"
            android:textSize="25sp" />

        <TextView
            android:layout_below="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/slogan"
            android:textSize="15sp"/>

    </RelativeLayout>

    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="125dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp">

                        <Button
                            android:id="@+id/btnCasos"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Casos"
                            android:drawableLeft="@drawable/ic_folder"
                            android:backgroundTint="@color/black"
                            android:textColor="@color/white"
                            android:fontFamily="@font/montserrat_semi_bold"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <RelativeLayout
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp">

                        <Button
                            android:id="@+id/btnEvidencias"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Evidencias"
                            android:drawableLeft="@drawable/ic_clip"
                            android:backgroundTint="@color/black"
                            android:textColor="@color/white"
                            android:fontFamily="@font/montserrat_semi_bold"/>

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp">


                <LinearLayout
                    android:id="@+id/cardTitle"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_cards"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/vTitle"
                        android:textAllCaps="true"
                        android:textSize="24dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/vDesc" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcConsejos"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/cardTitle"
                    android:background="@drawable/rounded_cards"/>






            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:padding="20dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/evidenciasTitle"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_semi_bold"/>

                    <TextView
                        android:id="@+id/btnVerTodaEvidencias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vAllTitle"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>



                </RelativeLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcEvidencias"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/rounded_cards"
                    android:layout_marginTop="15dp"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>
    

</LinearLayout>